Fixed spacing
fixed overlapping issues

--- a/pages/events.module.css
+++ b/pages/events.module.css
@@ -133,6 +133,7 @@
         font-size: 16px;
         color: white;
         font-weight: 300;
+        margin-bottom:2.5%;
     }
     .img1{
       margin-top:10%;
@@ -176,6 +177,7 @@
         font-size: 18px;
         color: white;
         font-weight: 300;
+        margin-bottom:2.5%;
     }
   
   }
@@ -218,6 +220,7 @@
     .exp {
         font-size: 18px;
         color: white;
+        margin-bottom:2.5%;
     }
   
   }
@@ -266,6 +269,7 @@
         font-size: 24px;
         color: white;
         font-weight: 300;
+        margin-bottom:3%;
     }
   
   }
@@ -322,6 +326,7 @@
         font-size: 12px;
         color: white;
         font-weight: 300;
+        margin-bottom:5%;
     }
   
   }
